; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/winhlp32/extr_hlpfile.c_HLPFILE_RtfAddGfxByIndex.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/winhlp32/extr_hlpfile.c_HLPFILE_RtfAddGfxByIndex.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.RtfData = type { i32 }

@.str = private unnamed_addr constant [21 x i8] c"Loading picture #%d\0A\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"|bm%u\00", align 1
@.str.2 = private unnamed_addr constant [13 x i8] c"no sub file\0A\00", align 1
@FALSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.RtfData*, i32*, i32)* @HLPFILE_RtfAddGfxByIndex to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @HLPFILE_RtfAddGfxByIndex(%struct.RtfData* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.RtfData*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca [16 x i8], align 16
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  store %struct.RtfData* %0, %struct.RtfData** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  %11 = load i32, i32* %7, align 4
  %12 = call i32 @WINE_TRACE(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0), i32 %11)
  %13 = getelementptr inbounds [16 x i8], [16 x i8]* %8, i64 0, i64 0
  %14 = load i32, i32* %7, align 4
  %15 = call i32 @sprintf(i8* %13, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0), i32 %14)
  %16 = load i32*, i32** %6, align 8
  %17 = getelementptr inbounds [16 x i8], [16 x i8]* %8, i64 0, i64 0
  %18 = call i32 @HLPFILE_FindSubFile(i32* %16, i8* %17, i32** %9, i32** %10)
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %23, label %20

20:                                               ; preds = %3
  %21 = call i32 @WINE_WARN(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.2, i64 0, i64 0))
  %22 = load i32, i32* @FALSE, align 4
  store i32 %22, i32* %4, align 4
  br label %37

23:                                               ; preds = %3
  %24 = load i32*, i32** %9, align 8
  %25 = getelementptr inbounds i32, i32* %24, i64 9
  store i32* %25, i32** %9, align 8
  %26 = load %struct.RtfData*, %struct.RtfData** %5, align 8
  %27 = load i32*, i32** %6, align 8
  %28 = load i32*, i32** %9, align 8
  %29 = load i32*, i32** %10, align 8
  %30 = load i32*, i32** %9, align 8
  %31 = ptrtoint i32* %29 to i64
  %32 = ptrtoint i32* %30 to i64
  %33 = sub i64 %31, %32
  %34 = sdiv exact i64 %33, 4
  %35 = trunc i64 %34 to i32
  %36 = call i32 @HLPFILE_RtfAddGfxByAddr(%struct.RtfData* %26, i32* %27, i32* %28, i32 %35)
  store i32 %36, i32* %4, align 4
  br label %37

37:                                               ; preds = %23, %20
  %38 = load i32, i32* %4, align 4
  ret i32 %38
}

declare dso_local i32 @WINE_TRACE(i8*, i32) #1

declare dso_local i32 @sprintf(i8*, i8*, i32) #1

declare dso_local i32 @HLPFILE_FindSubFile(i32*, i8*, i32**, i32**) #1

declare dso_local i32 @WINE_WARN(i8*) #1

declare dso_local i32 @HLPFILE_RtfAddGfxByAddr(%struct.RtfData*, i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
